k8s-manifests/apps/industrial-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: industrial-attachment
  labels:
    name: industrial-attachment
    environment: production
