k8s-manifests/apps/industrial-app/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: industrial-attachment
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: frontend
